--- a/src/archive.pug
+++ b/src/archive.pug
@@ -1,6 +1,7 @@
 - var page_title = "WISS 2022: 第30回インタラクティブシステムとソフトウェアに関するワークショップ"
 - 
   var data = [
+    { "name": "WISS 2021", "images": [ "wiss2021top.png", "wiss2021logo.png", "wiss2021_favicon.png" ], "url": "https://wiss.org/WISS2021/" },
     { "name": "WISS 2020", "images": [ "wiss2020top.png", "wiss2020logo_black.png", "wiss2020logo_white.png" ], "url": "https://wiss.org/WISS2020/" },
     {
       "name": "WISS 2019",
