--- a/src/committee.pug
+++ b/src/committee.pug
@@ -6,7 +6,7 @@
       role: "プログラム委員長",
       name: "志築 文太郎",
       affiliation: "筑波大学",
-      keywords: ["ユーザインターフェース", "ビジュアルプログラミング"],
+      keywords: ["ヒューマンコンピュータインタラクション（HCI）", "入力インタフェース"],
       link: "https://www.iplab.cs.tsukuba.ac.jp/~shizuki/index-j.html",
       image: "shizuki"
     }, 
