--- a/src/call-for-studentvolunteer.pug
+++ b/src/call-for-studentvolunteer.pug
@@ -12,6 +12,6 @@ html(lang=ja)
   body
     include includes/header
     .container.nav-padding.content
-      include:markdown-it(html=true typographer=true) md/design-competition.md
+      include:markdown-it(html=true typographer=true) md/call-for-studentvolunteer.md
     include includes/footer
     include includes/bootstrap-js
