--- a/src/index.pug
+++ b/src/index.pug
@@ -3,6 +3,10 @@
 - var logo_size = 260
 -
   var headlines = [
+    '2022/11/10: <a href="./call-for-participants.html">参加募集ページ</a>を掲載しました',
+    '2022/11/10: <a href="./call-for-studentstaff.html">学生ボランティア募集ページ</a>を掲載しました',
+    '2022/10/10: <a href="./challenge.html">WISS Challenge募集ページ</a>を掲載しました',
+    '2022/07/29: <a href="./design-competition.html">表紙デザイン募集ページ</a>を掲載しました',
     '2022/07/29: Webサイト公開',
   ]
 
