--- a/src/includes/sponsors.pug
+++ b/src/includes/sponsors.pug
@@ -1,9 +1,14 @@
 - 
   const sponsors = [
     {
-      name: "Name",
-      link: "https://www.wiss.org/WISS2022/",
-      logo: "template_sponser",
+      name: "株式会社サイバーエージェント AI Lab",
+      link: "https://cyberagent.ai/ailab/",
+      logo: "caailab",
+    },
+    {
+      name: "ほぼ日 サイエンス・マジック部",
+      link: "https://www.1101.com/n/s/boshu_sm",
+      logo: "hobonichi_sm",
     },
   ]
 
