--- a/src/index.pug
+++ b/src/index.pug
@@ -3,8 +3,11 @@
 - var logo_size = 260
 -
   var headlines = [
+    '2022/11/22: <a href="./call-for-papers.html">予稿有りデモ発表</a>の追加募集を行います．', 
+    '2022/11/11: 応募が定員に達したため，学生ボランティア募集を締め切りました',
+    '2022/11/11: <a href="./covid19d.html">参加形態と新型コロナ対策に関するページ</a>を掲載しました',
     '2022/11/10: <a href="./call-for-participants.html">参加募集ページ</a>を掲載しました',
-    '2022/11/10: <a href="./call-for-studentstaff.html">学生ボランティア募集ページ</a>を掲載しました',
+    '2022/11/10: <a href="./call-for-studentvolunteer.html">学生ボランティア募集ページ</a>を掲載しました',
     '2022/10/10: <a href="./challenge.html">WISS Challenge募集ページ</a>を掲載しました',
     '2022/07/29: <a href="./design-competition.html">表紙デザイン募集ページ</a>を掲載しました',
     '2022/07/29: Webサイト公開',
