--- a/src/award.pug
+++ b/src/award.pug
@@ -13,6 +13,68 @@ html(lang=ja)
     include includes/header
     .container.nav-padding.content
       h1 表彰
-      p 未定
+      h2 最優秀論文賞
+      p プログラム委員による，論文に対する投票で決定
+      h3 メアンダコイル++：継続的なウェアラブルコンピューティングのための衣類全面での安全で高効率な無線給電
+      p 高橋亮(東大)，雪田 和歌子(東大)，横田 知之(東大)，染谷 隆夫(東大)，川原圭博(東大)
+
+      h2 最優秀発表賞（プログラム委員）
+      p プログラム委員による，査読あり登壇発表に対する投票で決定
+      h3 Crane：プロダクトの意匠性・可折性・可製造性を考慮した折紙の計算設計プラットフォーム
+      p 須藤海(東大)，野間裕太(東大)，谷道鼓太朗(Nature Architects)，鳴海紘也(東大)，舘知宏(東大)
+
+      h2 最優秀発表賞（一般）
+      p 参加者による，査読あり登壇発表に対する投票で決定
+      h3 Gino .Aiki: 合気道の身体の使い方の習得を支援するMRソフトウェア
+      p 鈴木湧登(北大)，坂本大介(北大)，小野哲雄(北大)
+
+      h2 対話発表賞（プログラム委員）
+      p プログラム委員による，対話発表に対する投票で決定
+      h3 3Dプリンタを用いた封蝋表現手法の提案
+      p 菊地勇斗(はこだて未来大), 塚田浩二(はこだて未来大)
+
+      h2 対話発表賞（一般）
+      p 参加者による，対話発表に対する投票で決定
+      h3 Edible camouflage : レンチキュラ構造を利用した可食光学迷彩の提案
+      p 吉本健義(明治大), 宮下芳明(明治大)
+
+      h3 Open-TTTV:　調理家電に調味機構を付加するオープンソースハードウェア
+      p 宮下芳明(明治大), 村上崇斗(明治大)
+
+      h3 WhisperMask:騒音環境でも囁き声が利用可能なウェアラブルマイク
+      p 平城裕隆(東大, 産総研), 金澤周介(産総研), 三浦貴大(産総研, 東大), 吉田学(産総研), 持丸正明(産総研, 東大), 暦本純一(東大, Sony CSL)
+
+      h3 筋肉の肥大化を体験するマンガ物理学的MRシステム
+      p 津吹陸(東京電機大)，松浦 昭洋(東京電機大)
+
+      h3 時空間歪曲を用いたリズム感獲得支援システムとボールジャグリングへの応用
+      p 松本高(東工大), Erwin Wu(東工大), 小池英樹(東工大)
+
+      h3 Gino .Aiki: 合気道の身体の使い方の習得を支援するMRソフトウェア
+      p 鈴木湧登(北大)，坂本大介(北大)，小野哲雄(北大)
+
+      h2 Helpfeel賞
+      h3 微弱な接触を検知可能な毛状タッチセンサ
+      p 遠藤暁友(電通大), 原田雅文(北陸先端大), 錦織さくら(北陸先端大), 佐藤俊樹(北陸先端大)
+      h2 サイバーエージェント賞
+      h3 Displacement Projection Mapping: 実物体の境界を超えた形状変化の投影
+      p 幸谷有紗(東工大)，浦垣啓志郎(東工大)，宮藤詩緒(東工大)，小池英樹(東工大)
+
+      h2 チームラボ賞
+      h3 音韻と韻律を含めたオノマトペ音声からの Transformer による爆発音合成
+      p 滝沢力(京産大), 平井重行(京産大)
+
+      h2 ほぼ日賞
+      h3 Book Light: 小説の文章に視覚効果を付与する投影システムの提案
+      p 片桐大河(明治大), 渡邉海(明治大), 橋本直(明治大)
+
+      h2 ユニティ・テクノロジーズ・ジャパン賞
+      h3 WordCloudを用いたPC利用時の発話可視化手法の提案
+      p 友広純々野(はこだて未来大), 塚田浩二(はこだて未来大)
+
+      h2 表紙デザイン賞
+      p プログラム委員による，WISS論文集表紙デザインに対する投票で決定
+      h3 杉山 恭之（明治大学）
+
     include includes/footer
     include includes/bootstrap-js
