--- a/src/committee.pug
+++ b/src/committee.pug
@@ -22,7 +22,7 @@
       role: "副実行委員長",
       name: "中野 倫靖",
       affiliation: "産業技術総合研究所",
-      keywords: [],
+      keywords: ["歌声情報処理"],
       link: "https://staff.aist.go.jp/t.nakano/index-j.html",
       image: "nakano"
     }
