--- a/src/index.pug
+++ b/src/index.pug
@@ -3,7 +3,15 @@
 - var logo_size = 260
 -
   var headlines = [
-    '2022/11/22: <a href="./call-for-papers.html">予稿有りデモ発表</a>の追加募集を行います．', 
+    '2022/12/16: WISS 2022は無事に終了しました．来年は<a href="https://www.wiss.org/WISS2023/">WISS 2023</a>を開催予定です', 
+    '2022/12/16: <a href="./award.html">表彰ページ</a>を掲載しました', 
+    '2022/12/13: 有料オンライン参加登録締め切りました．無料オンライン参加をご利用ください', 
+    '2022/12/08: <a href="https://www.wiss.org/WISS2022Proceedings/">ウェブ予稿集</a>及び<a href="./downloads/proceedings.pdf">電子予稿集</a>を掲載しました', 
+    '2022/12/08: <a href="./demo-poster.html">デモ・ポスターページ</a>を掲載しました', 
+    '2022/11/30: <a href="./program.html">プログラムページ</a>を掲載しました', 
+    '2022/11/30: 現地参加申込を締め切りました', 
+    '2022/11/27: <a href="./call-for-papers.html">予稿なしデモ発表</a>の追加募集を行います', 
+    '2022/11/22: <a href="./call-for-papers.html">予稿有りデモ発表</a>の追加募集を行います', 
     '2022/11/11: 応募が定員に達したため，学生ボランティア募集を締め切りました',
     '2022/11/11: <a href="./covid19d.html">参加形態と新型コロナ対策に関するページ</a>を掲載しました',
     '2022/11/10: <a href="./call-for-participants.html">参加募集ページ</a>を掲載しました',
