--- a/src/program.pug
+++ b/src/program.pug
@@ -3,18 +3,43 @@
 - 
   const oral_sessions = [
     { 
-      session: "セッション: 未定", 
-      talks: [  ] ,
-      session_chair: "未定",
-      chat_chair: "未定",
+      session: "セッション1: 入力手法", 
+      talks: [ "01", "02", "03" ] ,
+      session_chair: "鳴海 紘也",
+      chat_chair: "高田 崚介",
+    },
+    { 
+      session: "セッション2: コンテンツ作成・理解", 
+      talks: [ "04", "05", "06" ] ,
+      session_chair: "宮下 芳明",
+      chat_chair: "大西 鮎美",
+    },
+    { 
+      session: "セッション3: トレーニング支援", 
+      talks: [ "07", "08", "09", "10" ] ,
+      session_chair: "栗原 一貴",
+      chat_chair: "倉本 到",
+    },
+    { 
+      session: "セッション4: ウェアラブル", 
+      talks: [ "11", "12" ] ,
+      session_chair: "倉本 到",
+      chat_chair: "池松 香",
+    },
+    { 
+      session: "セッション5: 実世界", 
+      talks: [ "13", "14", "15", "16" ] ,
+      session_chair: "岩本 拓也",
+      chat_chair: "加藤 邦拓",
     },
   ];
 - 
   const long_teasor_sessions = [
     {
       session: "ロングティザー", 
-      talks: [ ], 
-      session_chair: "未定",
+      talks: [ "T01", "T02", "T03", "T04", "T05", "T06", "T07", "T08", "T09" ], 
+      session_chair: "坂本 大介",
+      chat_chair: "原 貴洋",
     },
   ];
 - const placeholder_image_path = "./assets/representatives/placeholder.jpg"
@@ -47,9 +72,9 @@ html(lang=ja)
                     td #{entry["title"]} <small>[#{entry["duration"]}分]</small>
       h1 登壇発表・ロングティザー発表
       ul
-        li 登壇発表（ロング発表）：<b>XX分</b> <small>[発表XX分・質疑XX分]</small>
-        li 登壇発表（ショート発表）：<b>XX分</b> <small>[発表XX分・質疑XX分]</small>
-        li ロングティザー発表：<b>XX分</b> <small>[発表XX分・議論をセッションごとにまとめて実施]</small>
+        li 登壇発表（ロング発表）：<b>25分</b> <small>[発表15分・質疑10分]</small>
+        li 登壇発表（ショート発表）：<b>15分</b> <small>[発表10分・質疑5分]</small>
+        li ロングティザー発表：<b>5分</b> <small>[発表5分・議論をセッションごとにまとめて実施]</small>
       .program
         each session in oral_sessions
           hr
@@ -85,7 +110,7 @@ html(lang=ja)
             ul.list-inline
               //- li.list-inline-item <b>日時：</b>XX/XX XX:XX&mdash;XX:XX
               li.list-inline-item <b>座長：</b>#{session["session_chair"]}
-              //- li.list-inline-item <b>チャット座長：</b>（未定）
+              li.list-inline-item <b>チャット座長：</b>#{session["chat_chair"]}
           each talk in session["talks"]
             each entry in papers_data
               if entry["id"] == talk
